# SPLN2324

./: README.md
TPC1/: README.md  word_freq.py
TPC2/: README.md
TPC2/P1/: pyproject.toml
TPC2/P1/word_freq/: __init__.py
TPC3/: README.md  make_pyproject.py  pyproject.toml
TPC4/: README.md  sentAn_libs.py
TPC5/: README.md  spacy_test.py
TPC6/: README.md  conllbff.py
