[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "script"
authors = [
    {name = "topzN", email="jose.moreira.um@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9.1"
dynamic = ["version", "description"]

dependencies = ['cryptography', 'jjcli']

[project.scripts]
script = "script:main"